# CMake_Demo

Demo_01/: CMakeLists.txt  add.cpp  caculator.h  main.cpp  multiply.cpp  reduce.cpp  substract.cpp
Demo_02/: CMakeLists.txt  main.cpp
Demo_02/math/: CMakeLists.txt
Demo_03/: CMakeLists.txt
Demo_03/math/: CMakeLists.txt
Demo_04/: CMakeLists.txt
Demo_04/math/: CMakeLists.txt
Demo_05/: CMakeLists.txt
Demo_06/: CMakeLists.txt  main.cc
Demo_06/math/: CMakeLists.txt
Demo_07/: CMakeLists.txt  main.cc
Demo_08/: CMakeLists.txt
Demo_09/: CMakeLists.txt  License.txt  config.h.in  main.cc
